force-app/main/default/objects/QMMeasure__c/QMMeasure__c.object-meta.xml
<CustomObject>
    <description>[a0E][QMMeasure__c] Medidas da QM.</description>
    <label>Medida da QM</label>
    <nameField>
        <label>Numeração medida da QM</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Medidas da QM</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>