force-app/main/default/objects/QMMeasure__c/fields/CaseLkp__c.field-meta.xml
<CustomField>
    <fullName>CaseLkp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Caso</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Medidas da QM</relationshipLabel>
    <relationshipName>Medidas_da_QM</relationshipName>
    <type>Lookup</type>
</CustomField>