force-app/main/default/objects/QMMeasure__c/fields/CloseDateDte__c.field-meta.xml
<CustomField>
    <fullName>CloseDateDte__c</fullName>
    <label>Data de encerramento</label>
    <type>Date</type>
</CustomField>