force-app/main/default/objects/QMMeasure__c/fields/CustomIDTxt__c.field-meta.xml
<CustomField>
    <fullName>CustomIDTxt__c</fullName>
    <externalId>true</externalId>
    <label>Id Customizado</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>