force-app/main/default/objects/QMMeasure__c/fields/DepartmentTxt__c.field-meta.xml
<CustomField>
    <fullName>DepartmentTxt__c</fullName>
    <label>Departamento</label>
    <length>40</length>
    <type>Text</type>
</CustomField>