force-app/main/default/objects/QMMeasure__c/fields/DescriptionTxt__c.field-meta.xml
<CustomField>
    <fullName>DescriptionTxt__c</fullName>
    <label>Descrição</label>
    <type>TextArea</type>
</CustomField>