force-app/main/default/objects/QMMeasure__c/fields/QMLineNmb__c.field-meta.xml
<CustomField>
    <fullName>QMLineNmb__c</fullName>
    <label>Linha QM</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>