force-app/main/default/objects/QMMeasure__c/fields/QMSalesforceMdt__c.field-meta.xml
<CustomField>
    <fullName>QMSalesforceMdt__c</fullName>
    <label>QM Salesforce</label>
    <referenceTo>QM__c</referenceTo>
    <relationshipLabel>Medidas da QM</relationshipLabel>
    <relationshipName>Medidas_da_QM</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>