force-app/main/default/objects/QMMeasure__c/fields/ResponsibleUserTxt__c.field-meta.xml
<CustomField>
    <fullName>ResponsibleUserTxt__c</fullName>
    <label>Usuário Responsável</label>
    <length>12</length>
    <type>Text</type>
</CustomField>