force-app/main/default/objects/QMMeasure__c/fields/SLAExpiredBln__c.field-meta.xml
<CustomField>
    <fullName>SLAExpiredBln__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SLA expirado</label>
    <type>Checkbox</type>
</CustomField>