force-app/main/default/objects/QMMeasure__c/fields/SLAIndicatorFml__c.field-meta.xml
<CustomField>
    <fullName>SLAIndicatorFml__c</fullName>
    <formula>IF(
    SLAExpiredBln__c = true,
    IMAGE(&quot;/img/msg_icons/error24.png&quot;, &quot;Vermelho&quot;, 17, 17),       
    IMAGE(&quot;/img/msg_icons/confirm24.png&quot;, &quot;Verde&quot;, 17, 17)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Indicador SLA</label>
    <type>Text</type>
</CustomField>