force-app/main/default/objects/QMMeasure__c/fields/StatusTxt__c.field-meta.xml
<CustomField>
    <fullName>StatusTxt__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Em aberto</fullName>
            </value>
            <value>
                <fullName>Concluído</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>