force-app/main/default/objects/QMMeasure__c/fields/UserFullNameTxt__c.field-meta.xml
<CustomField>
    <fullName>UserFullNameTxt__c</fullName>
    <label>Nome completo usuário</label>
    <length>80</length>
    <type>Text</type>
</CustomField>